<resources>
    <string name="app_name">designs</string>
    <string name="todoo">TODO</string>
    <string name="button33">Button</string>
    <string name="textviiew">TextView</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="todo1">TODO</string>
    <string name="upload_your_file">Upload your file</string>
    <string name="todo4">TODO</string>
    <string name="convert">CONVERT</string>
    <string name="confirm">Confirm</string>
    <string name="todo45">TODO</string>
    <string name="get_text">GET TEXT</string>
    <string name="textveiew">TextView</string>
    <string name="textviwwew">TextView</string>
    <string name="textvieeeew">TextView</string>
    <string name="todo3">TODO</string>
    <string name="result">Result</string>
    <string name="copy">COPY</string>
    <string name="textvieeew">TextView</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="get_text_from_your_images">- Get text from your Images</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="text_extractor">Text Extractor</string>
    <string name="let_s_gow">Let\'s Go</string>
    <string name="todooooo">TODO</string>
    <string name="texitview">TextView</string>
    <string name="tgt">TextView</string>
    <string name="textview">TextView</string>
    <string name="textiiview">TextView</string>
</resources>