<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#114CBEF8"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="413dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textColor="#45c0ff"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="419dp"
        android:layout_height="81dp"
        android:orientation="horizontal"
        android:translationY="9dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/a2b1"
            android:layout_width="0dp"
            android:layout_height="81dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/get_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#45c0ff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="361dp"
        android:layout_height="321dp"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/a2v1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#45c0ff"
            android:contentDescription="@string/todo"
            android:padding="3dp"
            android:scaleType="fitXY" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>