<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#114CBEF8"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="419dp"
        android:layout_height="81dp"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:translationY="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/a1b1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="@font/ubuntu"
            android:onClick="select"
            android:text="@string/select_image"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#45c0ff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_horizontal|center_vertical"
            android:padding="7dp"
            android:text="@string/upload_your_file"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="187dp"
        android:layout_height="182dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/upimg" />

    <Button
        android:id="@+id/a1b2"
        android:layout_width="275dp"
        android:layout_height="293dp"
        android:background="#00FAF5F5"
        android:onClick="select"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>